# mcp-mongo-config

./: .gitignore  README.md  pyproject.toml
src/mongodb_mcp/: __init__.py  __main__.py  config.py  connection.py  mcp_server.py  server.py  simple_server.py
src/mongodb_mcp/handlers/: __init__.py  aggregation.py  collection.py  database.py  document.py
src/mongodb_mcp/security/: __init__.py  sanitizer.py  validator.py
tests/: test_config.py
